# E2GraphRAG

./: .gitignore  LICENSE  README.md  build_tree.py  dataloader.py  evaluate.py  extract_graph.py  main.py  main_cacheready.py  process_utils.py  prompt_dict.py  pyproject.toml  query.py  requirements.txt  utils.py
answer/test/: 20250715_query_time.txt
answer/test/InfiniteChoice/: book_0.json  book_1.json
configs/: example_config.yaml
data/: README.md
